# centro-diagnostico-v6

./: .gitignore  IMPLEMENTACION_SUMMARY.md  MAPEO_RUTAS.md  MEJORAS_IMPLEMENTADAS.md  README.md  auditoria_sistema.sh  backup_db.sh  diagnostico.sh  diagnostico_completo.sh  generar_analisis_falsos.sh  monitor.sh  reporte_sistema_20260217.txt  run_production.sh  setup.sh  setup_final.sh  start-all.sh  start-backend.sh  start-frontend.sh  test_final.sh  test_sistema_completo.sh  verificar_todo.sh
backend/: .env.example  package-lock.json  package.json  server.js
database/: schema.sql
desktop-agent/: README.md  agent.py  build.bat  config.example.json  installer.iss  port_detector.py  requirements.txt  uploader.py
desktop-app/: .gitignore  README.md  build.bat  main.js  package.json  preload.js
desktop-qt6/: CMakeLists.txt  README.md
desktop-qt6/src/: main.cpp
desktop-qt6/src/core/: appcontext.cpp  appcontext.h
desktop-qt6/src/db/: databasemanager.cpp  databasemanager.h
desktop-qt6/src/services/: connectivityservice.cpp  connectivityservice.h  syncengine.cpp  syncengine.h
desktop-qt6/src/ui/: mainwindow.cpp  mainwindow.h
docs/: DEPLOY_AGENTES_IMPLEMENTATION.md  INTEGRACION_MAQUINAS.md  README.md  README_ENTERPRISE.md  REVISION_MANUAL_COMPATIBILIDAD.md
frontend/: package-lock.json
label-printer/: README.md  build.bat  installer.iss  main.py  requirements.txt
qt6-centroapp/: CMakeLists.txt  README.md
qt6-centroapp/src/: main.cpp
qt6-centroapp/src/core/: AuthService.cpp  AuthService.h  DatabaseManager.cpp  DatabaseManager.h  SyncEngine.cpp  SyncEngine.h
qt6-centroapp/src/ui/: MainWindow.cpp  MainWindow.h
(+26 files in other folders)
